# wagtail-honeypot

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG  Makefile  README.md  manage.py  pyproject.toml  tox.ini
.github/workflows/: release.yml  test.yml
docs/: developer.md
docs/contributing/: releasing.md
tests/: settings.py  test_form.py  test_methods.py  test_models.py  test_tags.py
tests/testapp/migrations/: 0004_alter_formpage_honeypot.py
wagtail_honeypot/: models.py
wagtail_honeypot/locale/fr/LC_MESSAGES/: django.mo  django.po
wagtail_honeypot/templates/tags/: honeypot_fields.html
wagtail_honeypot/templatetags/: honeypot_tags.py
