[project]
name = "wagtail-honeypot"
version = "1.2.0"
description = "Add optional honeypot protection to your Wagtail forms."
readme = "README.md"
keywords = ["wagtail", "honeypot", "forms", "spam"]
authors = [
    {name = "Nick Moreton", email = "nickmoreton@me.com"}
]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Wagtail",
    "Framework :: Wagtail :: 6",
    "Framework :: Wagtail :: 7",
]
requires-python = ">=3.10"
dependencies =[
    "Wagtail>=6.3",
]

[project.optional-dependencies]
development = [
    "black==25.11.0",
    "flake8==7.3.0",
    "isort==7.0.0",
    "django-upgrade",
    "pyupgrade",
]

[project.urls]
Repository = "https://github.com/wagtail-packages/wagtail-honeypot"
Issues = "https://github.com/wagtail-packages/wagtail-honeypot/issues"
Changelog = "https://github.com/wagtail-packages/wagtail-honeypot/blob/release/CHANGELOG"
