[project]
name = "wagtail-honeypot"
version = "1.2.1"
description = "Add optional honeypot protection to your Wagtail forms."
readme = "README.md"
keywords = ["wagtail", "honeypot", "forms", "spam"]
authors = [
    {name = "Nick Moreton", email = "nickmoreton@me.com"}
]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Wagtail",
    "Framework :: Wagtail :: 6",
    "Framework :: Wagtail :: 7",
]
requires-python = ">=3.10"
dependencies =[
    "Wagtail>=6.3",
]

[dependency-groups]
dev = [
    "coverage",
    "Django>=5.2,<5.3",
    "django-upgrade",
    "pre-commit",
    "ruff==0.15.11",
    "tox",
    "tox-gh-actions",
    "Wagtail>=7.2,<7.3",
]

[project.urls]
Repository = "https://github.com/wagtail-packages/wagtail-honeypot"
Issues = "https://github.com/wagtail-packages/wagtail-honeypot/issues"
Changelog = "https://github.com/wagtail-packages/wagtail-honeypot/blob/release/CHANGELOG"

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    "*/migrations/*",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E203"]
